# cmdrun

./: .gitignore  .gitlab-ci.yml  .publish-state.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_READY.md  DESIGN_SUMMARY.md  DISTRIBUTION.md  INSTALL.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_BASELINE.md  PLUGIN_SYSTEM_IMPLEMENTATION_REPORT.md  PRE_RELEASE_CHECKLIST.md  PROGRESS.md  PUBLISHING.md  README.en.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  TODO.md  backup-suite-gitlab-ci.yml  cmdrun-analysis.json  commands.toml  commands.toml.backup.20251105_114114  install.sh  tasks.yml  test_parallel_commands.toml  todos.md
.cargo/: mutants.toml
.claude/: CLAUDE.md  REVIEW_SUMMARY.md
.claude/knowledge/: rust-graph.yaml
.claude/registry/: rust-ecosystem-tools.yaml
.claude/rules/: development-phases.yaml  performance-benchmarks.yaml  rust-security-standards.yaml  rust-specific-concerns.yaml
.cmdrun/: config.toml
.githooks/: README.md  pre-commit  pre-push
.github/: RELEASE_CHECKLIST.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  cli-testing-specialist.yml  coverage.yml  fuzzing.yml  mutation-testing.yml  release.yml
Formula/: cmdrun.rb
archive/development/: DESIGN_SUMMARY.md  GETTING_STARTED.md  PROGRESS.md  REMOVE_IMPLEMENTATION.md
archive/docs/: DISTRIBUTION_SUMMARY.md  IMPLEMENTATION_PLAN.md  INIT_IMPLEMENTATION.md
archive/implementation-reports/: CHINESE_I18N_IMPLEMENTATION.md  TEMPLATE_FEATURE_REPORT.md  TUI_IMPLEMENTATION_SUMMARY.md
benches/: command_execution.rs  startup_time.rs  toml_parsing.rs
cmdrun-reports/: cmdrun-tests-junit.xml  cmdrun-tests-report.html  cmdrun-tests-report.json  cmdrun-tests-report.md
cmdrun-tests/: basic.bats  destructive-ops.bats  help.bats  multi-shell.bats  performance.bats  security.bats
docs/: CLI-TESTING-GUIDE.md  DISTRIBUTION.md  ENVIRONMENT_MANAGEMENT.md  MANUAL_TESTING_GUIDE.md  PACKAGE_REGISTRY_SETUP.md  PERFORMANCE.md  README.md  ROADMAP.md
docs/distribution/: DISTRIBUTION_GUIDE.md  QUICK_START.md  RELEASE_CHECKLIST.md  ci.yml.template  cmdrun.rb.template  release.yml.template
docs/features/: typo-detection.md
docs/plugins/: API.md  DEVELOPMENT_GUIDE.md
docs/proposals/: AI_INTEGRATION.md  AI_INTEGRATION_TECHNICAL_SPEC.md
docs/technical/: ARCHITECTURE.md  CROSS_PLATFORM.md  DISTRIBUTION.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_GUIDE.md  PROFILING.md  SECURITY.md
docs/testing/: best-practices.md  mutation-testing-guide.md  mutation-testing-results.md  test-analysis-report.md
docs/user-guide/: CLI.ja.md  CLI.md  CONFIGURATION.md  ENVIRONMENT.md  FAQ.md  HISTORY.md  I18N.md  INSTALLATION.md  RECIPES.md  TROUBLESHOOTING.md  WATCH_MODE.md
examples/: commands.toml  config.toml  history_usage.md  test_parallel.rs  typo_demo.rs
examples/plugins/: README.md  build_plugins.sh
examples/plugins/hello_plugin/: Cargo.toml
examples/plugins/logger_plugin/: Cargo.toml
examples/plugins/logger_plugin/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_command_parts.rs  fuzz_interpolation.rs  fuzz_toml_config.rs  fuzz_validation.rs
json/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
json/mutants.out.old/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
json/mutants.out.old/diff/: src__command__executor.rs_line_103_col_9_001.diff  src__command__executor.rs_line_103_col_9_002.diff  src__command__executor.rs_line_118_col_12.diff  src__command__executor.rs_line_155_col_9.diff  src__command__executor.rs_line_155_col_9_001.diff  src__command__executor.rs_line_155_col_9_002.diff  src__command__executor.rs_line_160_col_12.diff  src__command__executor.rs_line_173_col_9.diff  src__command__executor.rs_line_173_col_9_002.diff  (+29 more)
reports/: backup-suite--tests-report.html  cldev--tests-report.html  cmdrun--tests-report.html
scripts/: benchmark.sh  benchmark_comparison.py  install.sh  migrate-from-bash.sh  performance_test.sh  prepare-release.sh  profile.sh  record-demo.sh
src/: cli.rs  error.rs  i18n.rs  lib.rs  main.rs
src/command/: dependency.rs  executor.rs  graph_visualizer.rs  interpolation.rs  mod.rs
src/commands/: add.rs  completion.rs  config.rs  edit.rs  env.rs  history.rs  info.rs  init.rs  mod.rs  open.rs  plugin.rs  remove.rs  search.rs  template.rs  validate.rs  watch.rs
src/config/: environment.rs  loader.rs  mod.rs  schema.rs  validation.rs
src/history/: mod.rs  recorder.rs  storage.rs
src/output/: formatter.rs  logger.rs  mod.rs
src/platform/: shell.rs
src/plugin/: api.rs  loader.rs  manager.rs  mod.rs  registry.rs
src/security/: mod.rs  secrets.rs  validation.rs
src/template/: builtin.rs  manager.rs  mod.rs  schema.rs
src/tui/: app.rs  fuzzy.rs  handler.rs  mod.rs  ui.rs
src/utils/: mod.rs  typo_detector.rs
src/watch/: config.rs  debouncer.rs  executor.rs  matcher.rs  mod.rs  watcher.rs
templates/: commands.toml  node.toml  python.toml  rust.toml  web.toml
templates/builtin/: nodejs-web.toml  python-data.toml  react-app.toml  rust-cli.toml
tests/: README.md  comprehensive_behavior_test.rs  e2e_tests.rs  edge_cases.rs  lib_integration_tests.rs  proptest_coverage.proptest-regressions  proptest_coverage.rs  test_remove.rs  unit_color_output.rs  unit_dependency_graph.rs  unit_executor.rs  unit_i18n.rs  unit_interpolation.rs  unit_typo_detector.rs
tests/bats/: README.md  run-tests.sh  security.bats
tests/e2e/: cli_workflow.rs  framework.rs  mod.rs
tests/fixtures/: commands.toml
tests/integration/: basic.rs  cli_commands.rs  cli_main.rs  completion_commands.rs  cross_platform.rs  dependencies.rs  env_commands.rs  environment.rs  error_handling.rs  executor_errors.rs  history.rs  history_commands.rs  interactive.rs  parallel.rs  platform_validation.rs  plugin_commands.rs  test_add.rs  test_config.rs  test_logger.rs  test_search.rs  watch.rs  watch_advanced.rs
tests/lib_integration/: mod.rs  test_add_commands.rs  test_config_commands.rs  test_search_commands.rs
tests/plugin/: basic.rs
tests/security/: injection.rs
(+20 files in other folders)
