[package]
name = "cmdrun"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["Sanae Abe <sanae.a.sunny@gmail.com>"]
license = "MIT"
description = "A fast, secure, and cross-platform command runner with TOML configuration"
repository = "https://github.com/sanae-abe/cmdrun"
homepage = "https://github.com/sanae-abe/cmdrun"
documentation = "https://docs.rs/cmdrun"
readme = "README.md"
keywords = ["cli", "command", "runner", "toml", "task"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tests/fixtures/*",
    ".github/*",
    "scripts/*",
]

[dependencies]
# コマンドライン引数パース（高性能・derive マクロ対応）
clap = { version = "4.5", features = ["derive", "cargo", "env", "wrap_help"] }
clap_complete = "4.5"

# TOML パース（高速・エラー詳細）
toml = { version = "0.8", features = ["preserve_order"] }
toml_edit = "0.23"  # TOML編集（フォーマット保持）

# 非同期ランタイム（最適化済み・必要機能のみ）
tokio = { version = "1.39", features = [
    "macros",          # async/await マクロ
    "rt-multi-thread", # マルチスレッドランタイム
    "process",         # プロセス実行
    "io-util",         # I/O ユーティリティ
    "fs",              # ファイルシステム操作
    "time",            # タイマー機能
    "signal",          # シグナルハンドリング
    "sync",            # 同期プリミティブ（mpsc等）
] }

# エラーハンドリング（詳細なエラー情報）
anyhow = "1.0"
thiserror = "2.0"

# 対話的入力（readline機能付き）
dialoguer = "0.12"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# ファイルシステム操作
walkdir = "2.5"
globset = "0.4"
ignore = "0.4"  # .gitignore 対応
notify = "8.2"  # ファイル監視
notify-debouncer-full = "0.6"  # イベントデバウンス

# プロセス実行（クロスプラットフォーム） - tokio::process使用
shell-words = "1.1"  # シェルコマンド解析

# 環境変数・パス操作
dirs = "6.0"
shellexpand = "3.1"

# カラー出力
colored = "3.0"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 正規表現
regex = { version = "1.10", default-features = false, features = ["std", "perf"] }
once_cell = "1.19"  # LazyStatic代替（正規表現キャッシュ等）

# 日時操作
chrono = "0.4"

# プラットフォーム検出
which = "8.0"  # 実行可能ファイル検索
os_info = "3.8"  # OS情報取得

# セキュリティ
secrecy = "0.10"  # 機密情報保護

# パフォーマンス最適化
ahash = { version = "0.8", features = ["serde"] }  # 高速ハッシュマップ
smallvec = "1.13"  # スタック最適化ベクター

# 文字列類似度計算（typo検出）
strsim = "0.11"  # Levenshtein distance, Jaro-Winkler等

# 履歴管理（SQLite）
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite データベース

# プラグインシステム
libloading = { version = "0.9", optional = true }  # 動的ライブラリロード
abi_stable = { version = "0.11", optional = true }  # ABI安定性保証
uuid = { version = "1.10", features = ["v4", "serde"], optional = true }  # プラグインID生成

[dev-dependencies]
# テスト
proptest = "1.5"  # プロパティベーステスト
quickcheck = "1.0"
mockall = "0.13"  # モック
pretty_assertions = "1.4"  # アサーション表示改善
tempfile = "3.12"  # 一時ファイル

# ベンチマーク
criterion = { version = "0.7", features = ["html_reports"] }

[build-dependencies]
# ビルド時コード生成
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[profile.release]
# 本番最適化
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
# デバッグシンボル付きリリース（プロファイリング用）
inherits = "release"
strip = false
debug = true

[profile.dev]
# 開発時の高速コンパイル
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
# テスト最適化
opt-level = 2

[[bin]]
name = "cmdrun"
path = "src/main.rs"

[lib]
name = "cmdrun"
path = "src/lib.rs"

# Integration tests
[[test]]
name = "basic"
path = "tests/integration/basic.rs"

[[test]]
name = "dependencies"
path = "tests/integration/dependencies.rs"

[[test]]
name = "watch"
path = "tests/integration/watch.rs"

[[test]]
name = "environment"
path = "tests/integration/environment.rs"

[[test]]
name = "history"
path = "tests/integration/history.rs"

[[test]]
name = "completion_commands"
path = "tests/integration/completion_commands.rs"

[[test]]
name = "plugin_commands"
path = "tests/integration/plugin_commands.rs"

[[test]]
name = "executor_errors"
path = "tests/integration/executor_errors.rs"

[[test]]
name = "watch_advanced"
path = "tests/integration/watch_advanced.rs"

[[test]]
name = "cli_main"
path = "tests/integration/cli_main.rs"

[[test]]
name = "cross_platform"
path = "tests/integration/cross_platform.rs"

[[test]]
name = "platform_validation"
path = "tests/integration/platform_validation.rs"

[[test]]
name = "security_injection"
path = "tests/security/injection.rs"

[[bench]]
name = "command_execution"
harness = false

[[bench]]
name = "toml_parsing"
harness = false

[[bench]]
name = "startup_time"
harness = false

[features]
# デフォルト機能
default = ["color", "json-output", "plugin-system"]

# オプション機能
color = []
json-output = ["serde_json"]
trace = ["tracing/max_level_trace"]
plugin-system = ["libloading", "uuid"]  # プラグインシステム有効化
plugin-abi-stable = ["plugin-system", "abi_stable"]  # ABI安定性保証

# 実験的機能
experimental = []
